fixed issue #18 and #32 now the active-navlinks are working on every single page and have been added to a seperate active-navlink.js file instead of having it in a script tag in html, also added the jquery for search-bar expansion transition to search.js

--- a/4pics1word/templates/create_game.html
+++ b/4pics1word/templates/create_game.html
@@ -19,6 +19,7 @@
     <script defer src = "{{url_for('static', filename = 'js/search.js')}}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/create_game.css') }}">
     <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
+    <script defer src = "{{url_for('static', filename = 'js/active-navlink.js')}}"></script>
 
 </head>
 
