--- a/4pics1word/templates/challenge-board.html
+++ b/4pics1word/templates/challenge-board.html
@@ -16,6 +16,7 @@
     <script defer src = "{{url_for('static', filename = 'js/login-validation.js')}}"></script>
     <script defer src = "{{url_for('static', filename = 'js/search.js')}}"></script>
     <script defer src = "{{url_for('static', filename = 'js/upvote.js')}}"></script>
+    <script defer src = "{{url_for('static', filename = 'js/active-navlink.js')}}"></script>
     <!-- <script defer src="{{ url_for('static', filename='js/trending-cards.js') }}"></script> -->
     <title>Challenges | Explore Other SnapCipher games </title>
     <style>
@@ -184,25 +185,6 @@
         </div>
     </div>
     
-    <script>
-  
-        $('.search-box input').focus(function() {
-          $(this).parent().parent().css('width', '40vw');
-      });
-      
-      $('.search-box input').blur(function() {
-          $(this).parent().parent().css('width', '36vw');  
-      });
-
-        document.querySelectorAll('.nav-link').forEach(
-            link=>{
-                if(link.href == window.location.href){
-                    link.setAttribute('aria-current','page')
-                }
-            }
-        )
-      
-      </script>
     </body>
 
 </html>
