--- a/4pics1word/templates/challenge.html
+++ b/4pics1word/templates/challenge.html
@@ -26,6 +26,7 @@
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script defer src="{{ url_for('static', filename='js/particles.js') }}"></script>
   <script defer src="{{ url_for('static', filename='js/image-interaction.js') }}"></script>
+  <script defer src = "{{url_for('static', filename = 'js/active-navlink.js')}}"></script>
 
 </head>
 
