--- a/4pics1word/templates/detailed-challenge.html
+++ b/4pics1word/templates/detailed-challenge.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/game_attempt.css') }}">
     <script defer src = "{{url_for('static', filename = 'js/search.js')}}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    
+    <script defer src = "{{url_for('static', filename = 'js/active-navlink.js')}}"></script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script defer src="{{ url_for('static', filename='js/particles.js') }}"></script>
 
