--- a/4pics1word/static/css/nav-bar.css
+++ b/4pics1word/static/css/nav-bar.css
@@ -132,10 +132,9 @@ i{
     margin-left: 2vw !important;
 }
 
-.form-control:focus{
+#srch:focus{
     box-shadow: none!important;
     border: 1px solid #ccc!important;
-
 }
 
 
