--- a/4pics1word/static/css/styles.css
+++ b/4pics1word/static/css/styles.css
@@ -63,13 +63,16 @@
     padding: 20px 45px 20px 20px;
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1); 
     transition: border-color 0.3s, box-shadow 0.3s; 
-    &:focus {
-        border-color: #9932cc; 
-        box-shadow: inset 0 2px 4px rgba(128, 0, 128, 0.4);
-    }
-    &::placeholder {
-        color: #aaa; 
-    }
+}
+
+.input-box input:focus {
+    border-color: #9932cc !important; 
+    box-shadow: inset 0 2px 4px rgba(128, 0, 128, 0.4);
+}
+
+.input-box input::placeholder {
+    color: #aaa; 
+
 }
 
 .input-box i {
@@ -103,13 +106,14 @@
     cursor: pointer;
     font-size: 16px;
     color: #ffffff; 
-    margin-top: 20px; 
-    &:hover,
-    &:focus {
-        background-color: #9932cc; 
-        color: #ffffff; 
-        box-shadow: 0 0 10px rgba(128,0,128,.5); 
-    }
+    margin-top: 20px;
+}
+
+.wrapper .btn:hover,
+.wrapper .btn:focus {
+    background-color: #9932cc; 
+    color: #ffffff; 
+    box-shadow: 0 0 10px rgba(128,0,128,.5); 
 }
 
 .wrapper .register-link {
@@ -122,9 +126,10 @@
     color: #9932cc; 
     text-decoration: none;
     font-weight: 600;
-    &:hover {
-        text-decoration: underline;
-    }
+}
+
+.Login-link p a:hover {
+    text-decoration: underline;
 }
 
 .wrapper .Login-link {
@@ -137,7 +142,8 @@
     color: #9932cc; 
     text-decoration: none;
     font-weight: 600;
-    &:hover {
-        text-decoration: underline;
-    }
+}
+
+.register-link p a:hover {
+    text-decoration: underline;
 }
