removed button type from anchor tag to ensure passing of HTML validator

--- a/4pics1word/templates/challenge.html
+++ b/4pics1word/templates/challenge.html
@@ -58,7 +58,7 @@
         <h3 id = 'leaderboard-position'></h3>
         <p>on the leaderboard!</p>
       </div>
-      <a type = button class="p-3 mt-4 redirect-button go-to-challenge-button text-decoration-none" href = "/challenge/{{ challenge_id }}" >Go to Challenge Page</a>
+      <a class="p-3 mt-4 redirect-button go-to-challenge-button text-decoration-none" href = "/challenge/{{ challenge_id }}" >Go to Challenge Page</a>
     </div>
   </div>
 
