--- a/4pics1word/templates/create_game.html
+++ b/4pics1word/templates/create_game.html
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <script defer src = "{{url_for('static', filename = 'js/search.js')}}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/create_game.css') }}">
     <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
@@ -76,7 +76,7 @@
                                 <path fill-rule="evenodd"
                                     d="M8 0a5.53 5.53 0 0 0-3.594 1.342c-.766.66-1.321 1.52-1.464 2.383C1.266 4.095 0 5.555 0 7.318 0 9.366 1.708 11 3.781 11H7.5V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11h4.188C14.502 11 16 9.57 16 7.773c0-1.636-1.242-2.969-2.834-3.194C12.923 1.999 10.69 0 8 0m-.5 14.5V11h1v3.5a.5.5 0 0 1-1 0" />
                             </svg>
-                            <div>Upload Image</div>
+                            <span>Upload Image</span>
                         </label>
                         <input required type="file" name='image1' class="upload-input form-control" id='image-input1'
                             style='display: none;' accept="image/*">
@@ -103,7 +103,7 @@
                                 <path fill-rule="evenodd"
                                     d="M8 0a5.53 5.53 0 0 0-3.594 1.342c-.766.66-1.321 1.52-1.464 2.383C1.266 4.095 0 5.555 0 7.318 0 9.366 1.708 11 3.781 11H7.5V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11h4.188C14.502 11 16 9.57 16 7.773c0-1.636-1.242-2.969-2.834-3.194C12.923 1.999 10.69 0 8 0m-.5 14.5V11h1v3.5a.5.5 0 0 1-1 0" />
                             </svg>
-                            <div>Upload Image</div>
+                            <span>Upload Image</span>
                         </label>
                         <input required type="file" name='image2' class="upload-input" id='image-input2' accept="image/*">
                     </div>
@@ -130,7 +130,7 @@
                                 <path fill-rule="evenodd"
                                     d="M8 0a5.53 5.53 0 0 0-3.594 1.342c-.766.66-1.321 1.52-1.464 2.383C1.266 4.095 0 5.555 0 7.318 0 9.366 1.708 11 3.781 11H7.5V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11h4.188C14.502 11 16 9.57 16 7.773c0-1.636-1.242-2.969-2.834-3.194C12.923 1.999 10.69 0 8 0m-.5 14.5V11h1v3.5a.5.5 0 0 1-1 0" />
                             </svg>
-                            <div>Upload Image</div>
+                            <span>Upload Image</span>
                         </label>
                         <input required type="file" name='image3' class="upload-input" id='image-input3' accept="image/*">
                     </div>
@@ -157,7 +157,7 @@
                                 <path fill-rule="evenodd"
                                     d="M8 0a5.53 5.53 0 0 0-3.594 1.342c-.766.66-1.321 1.52-1.464 2.383C1.266 4.095 0 5.555 0 7.318 0 9.366 1.708 11 3.781 11H7.5V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11h4.188C14.502 11 16 9.57 16 7.773c0-1.636-1.242-2.969-2.834-3.194C12.923 1.999 10.69 0 8 0m-.5 14.5V11h1v3.5a.5.5 0 0 1-1 0" />
                             </svg>
-                            <div>Upload Image</div>
+                            <span>Upload Image</span>
                         </label>
                         <input required type="file" name='image4' class="upload-input" id='image-input4' accept="image/*">
                     </div>
@@ -175,7 +175,7 @@
                 <div class="col-12 mt-2 d-flex justify-content-center">
                     <input required name='answer' maxlength="24" id="word-input" placeholder='PHRASE' class='text' type="text">
                 </div>
-                <script defer>
+                <script>
                     const isUpperCase = (string) => /^[A-Z]*$/.test(string)
                     const isLowerCase = (string) => /^[a-z]*$/.test(string)
 
@@ -221,7 +221,7 @@
 
         <div id='fill-in-error' class='errors' style='color: red; text-align: center; display: none;'>Fill in all required fields</div>
 
-        <button id='submit-upload-game' type='submit' class="btn btn-primary" id="submit-btn">SUBMIT</button>
+        <button id='submit-upload-game' type='submit' class="btn btn-primary">SUBMIT</button>
 
     </form>
 
