duplicate upvotes and downvotes will not occur, and added upvote and downvote classes which persist upon generation of the html so the user knows if they have previously upvoted or downvoted a game

--- a/4pics1word/static/css/challenge-board.css
+++ b/4pics1word/static/css/challenge-board.css
@@ -98,6 +98,14 @@ body {
     display: none; /* For Chrome, Safari, Opera */
 }
 
+.upvote-button.active-upvote svg{
+    fill: rgb(19, 187, 19);
+}
+
+.downvote-button.active-downvote svg{
+    fill: red;
+}
+
 .upvote-button:hover svg{
     fill: rgb(19, 187, 19);
 }
