--- a/4pics1word/templates/challenge-board.html
+++ b/4pics1word/templates/challenge-board.html
@@ -32,18 +32,24 @@
 </head>
 
 <body>
+
+    <!-- Navbar html generated using jinja templates -->
     {% include "/html_components/navbar.html" %}
 
     {% include "/html_components/auth_modal.html" %}
 
+    <!-- div which allows the particles-js to display-->
     <div id="particles-js"></div>
 
-    <!-- Trending Cards -->
+
+    <!-- Trending Cards Section -->
     <div class="container mt-5 trending-posts">
         <div class="sub-headings mb-4" id="trending-header">
             <h1>Trending Challenges</h1>
         </div>
-        <div id="trendingCards" class="row d-none d-md-flex">
+        <!-- Set up for trending cards when the screen is medium or greater-->
+        <div class="row d-none d-md-flex">
+            <!-- Layout for each 'card' which represents a trending game displayed in rows dynamically generated -->
             <div class="col-md-3">
                 <a href="{{ url_for('challenge_page', challenge_id=trending_games[0].gameId) }}" style="text-decoration: none; color: inherit;">
                     <div class="card">
@@ -90,9 +96,10 @@
             </div>
         </div>
 
-        <!-- Horizontal scroll for smaller screens -->
-        <div id="trendingCardsMobile" class="d-md-none d-flex flex-row flex-nowrap overflow-auto">
+        <!-- Trending cards when the screen size is smaller than medium, such as phone screen with sccroll -->
+        <div id="trending-card-mobile" class="d-md-none d-flex flex-row flex-nowrap overflow-auto">
             <div class="card" style="min-width: 80%; margin-right: 20px;">
+                <!-- Single trending card -->
                 <a href="{{ url_for('challenge_page', challenge_id=trending_games[0].gameId) }}" style="text-decoration: none; color: inherit;">
                     <img src={{ trending_games[0].image1 }} class="card-img-top" alt="Image">
                     <div class="card-img-overlay">
@@ -131,10 +138,12 @@
         </div>
     </div>
 
-    <!-- Challenge Board -->
+    
+    <!-- Challenge Board Container -->
     <div class="container col-md-10 mt-5 sub-headings" id="challenges-header">
         <h1>Challenges</h1>
     </div>
+    <!-- Dynamically generated trending cards using the load-new-challenges.js file -->
     <div class="container mt-4 mb-4 col-md-10 challenge-board">
         <div class="container mt-4" id = 'games-container'>
             
