--- a/4pics1word/static/css/challenge-board.css
+++ b/4pics1word/static/css/challenge-board.css
@@ -21,7 +21,8 @@ body {
 }
 
 .sub-headings h1 {
-    font-size: 49px;
+    font-size: clamp(34px, 5vw, 42px);
+    /* font-size: 49px; */
     font-weight: 600;
 }
 
