--- a/4pics1word/templates/detailed-challenge.html
+++ b/4pics1word/templates/detailed-challenge.html
@@ -77,14 +77,21 @@
                             <th>Attempts</th>
                         </tr>
                     </thead>
+                    <!-- If no players have played then tell the user, otherwise show player performance dtaa -->
                     <tbody>
-                        {% for pos in range(leaderboard|length) %}  
+                        {% if leaderboard|length == 0 %}
                             <tr>
-                                <td>{{pos + 1}}</td>
-                                <td>{{leaderboard[pos].user.username}}</td>
-                                <td>{{leaderboard[pos].attempts}}</td>
+                                <td colspan="3">No one has played this game yet.</td>
                             </tr>
-                        {% endfor %}
+                        {% else %}
+                            {% for pos in range(leaderboard|length) %}  
+                                <tr>
+                                    <td>{{ pos + 1 }}</td>
+                                    <td>{{ leaderboard[pos].user.username }}</td>
+                                    <td>{{ leaderboard[pos].attempts }}</td>
+                                </tr>
+                            {% endfor %}
+                        {% endif %}
                     </tbody>
                 </table>
             </div>
