Added a favicon file, included this on the HTML pages for the tab icon.

--- a/4pics1word/templates/challenge-board.html
+++ b/4pics1word/templates/challenge-board.html
@@ -22,6 +22,9 @@
 
 
     <title>Challenges | Explore Other SnapCipher games </title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="{{url_for('static', filename = 'assets/favicon.ico')}}">
+
     <style>
         .form-control.is-valid, .was-validated .form-control:valid {
             background-image: none;
