--- a/4pics1word/templates/challenge.html
+++ b/4pics1word/templates/challenge.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>4pics1word | Play Game</title>
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="{{url_for('static', filename = 'assets/favicon.ico')}}">
+
   <script> const answer = "{{ answer }}"; const challenge_id = "{{ challenge_id }}"; let attempt = "{{ attempt_count }}"; const message = "{{ message }}";</script>
   <link rel="stylesheet" href="{{url_for('static', filename = 'css/nav-bar.css')}}">
   <script defer src="{{ url_for('static', filename='js/game-attempt.js') }}"></script>
