--- a/4pics1word/templates/index.html
+++ b/4pics1word/templates/index.html
@@ -35,6 +35,9 @@
     </style>
 
     <title>SnapCiphers | Create and Solve Picture Puzzles</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="{{url_for('static', filename = 'assets/favicon.ico')}}">
+
 </head>
 
 <body>
