--- a/4pics1word/templates/create_game.html
+++ b/4pics1word/templates/create_game.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SnapCipher | Create Game</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="{{url_for('static', filename = 'assets/favicon.ico')}}">
+
     <link rel="stylesheet" href="{{url_for('static', filename = 'css/nav-bar.css')}}">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
