--- a/4pics1word/templates/challenge.html
+++ b/4pics1word/templates/challenge.html
@@ -41,6 +41,7 @@
 
   <div id="particles-js"></div>
 
+  <!-- Alert information used for cases such as playing own game-->
   <div id="alert" class="alert alert-warning alert-dismissible fade show" role="alert">
 
     <strong>FYI</strong>
@@ -51,6 +52,7 @@
     </button>
   </div>
 
+  <!-- Popup for correct answers -->
   <div class="correct-answer-popup" id = 'will-count-popup'>
     <div class="correct-popup-content">
       <div>
@@ -84,6 +86,7 @@
       Attempt <span id="attempt-counter"></span>
     </h2>
 
+    <!-- Contains the game images -->
     <div class="container content-container mt-3">
       <div class="row mt-3 justify-content-center">
         <div class="col-6 image-cell" id='img1'>
@@ -102,6 +105,7 @@
         </div>
       </div>
 
+      <!-- Dynamically generate boxes per letter in the secret word, where user enters their guesses -->
       <div class="container justify-content-center align-items-center">
         <div class='word-enter-title text' style='text-align: center;'>
           Guess the word or phrase!
@@ -123,6 +127,7 @@
           {% endfor %}
         </div>
 
+        <!-- Make guess and show hint buttons -->
         <div class="container col-12 d-flex justify-content-center">
           <div class="col-6 d-flex mb-4 justify-content-center">
             <button onclick="makeGuess()" class="btn btn-primary col-10 play-button" id="make-guess">Guess</button>
